syntax = "proto3";

package protocol;

option go_package = "./reduced;reduced";

message MostProfitsProducts {
  string year_month_created_at = 1;
  int32 item_id = 2;
  double profit_sum = 3;
}

message MostProfitsProductsBatch {
  repeated MostProfitsProducts items = 1;
}
